# minecraft-protocol

./: Cargo.toml  nbt.txt
crates/protocol-buf/: Cargo.toml
crates/protocol-buf/src/: buffer.rs  compression.rs  lib.rs  macros.rs  types.rs
crates/protocol-core/: Cargo.toml
crates/protocol-core/src/: client.rs  server.rs
crates/protocol-macros/: Cargo.toml
crates/protocol-network/: Cargo.toml
crates/protocol-network/src/: connection.rs  identifier.rs  lib.rs  position.rs  v1_21.rs
crates/protocol-network/src/buffer/: buffer.rs  mod.rs  types.rs  varnum.rs
crates/protocol-network/src/packet/: handle.rs  login.rs  macros.rs  mod.rs  registry.rs  result.rs  status.rs
crates/protocol-network/src/tcp/client/: connection.rs
crates/protocol-network/src/tcp/server/: connection.rs
crates/protocol-packets/: Cargo.toml
crates/protocol-packets/src/: lib.rs
crates/protocol-registry/: Cargo.toml
crates/protocol-registry/src/: armor_trim.rs  banner.rs  biome.rs  chat_type.rs  damage_type.rs  dimension_type.rs  lib.rs  wolf.rs
crates/protocol-registry/src/network/: types.rs
src/: main.rs
