[package]
name = "minecraft-protocol"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/protocol-macros", "crates/protocol-network", "crates/protocol-registry"]

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
protocol-network = { path = "crates/protocol-network" }
